<resources>
    <string name="app_name">SesionROOM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_create">Create</string>
    <string name="nombre">Digite nombre</string>
    <string name="telefono">Digite telefono</string>
    <string name="cantidad">Digite cantidad</string>
    <string name="guardar">Guardar</string>
    <string name="title_read">Read</string>
    <string name="buscar">Buscar</string>
    <string name="title_update">update</string>
    <string name="actualizar">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_delete">Delete</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">Acceder</string>
    <string name="registro">Registrar</string>
    <string name="login_correo">Correo electrónico</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_acceder">Acceder</string>
    <string name="login_registro">Registrar</string>
    <string name="registro_registrar">Registrar</string>
    <string name="registro_correo">Ingrese Correo Electrónico</string>
    <string name="registro_contrasena">Ingrese Contraseña</string>
    <string name="title_list">List</string>
</resources>